swagger docs for shikivideos
