# swagger-jsdoc-options.json
@@ -121,6 +121,71 @@
             "type": "string"
           },
           "example": ["admin", "user"]
+        },
+        "ShikivideosKinds": {
+          "type": "string",
+          "enum": ["озвучка", "оригинал", "субтитры"]
+        },
+        "ShikivideosLengthResponse": {
+          "type": "object",
+          "properties": {
+            "length": {
+              "type": "integer",
+              "example": 12
+            }
+          }
+        },
+        "Shikivideos": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "integer",
+              "example": 882657
+            },
+            "url": {
+              "type": "string",
+              "example": "http://video.sibnet.ru/shell.php?videoid=1503010"
+            },
+            "anime_id": {
+              "type": "integer",
+              "example": 6
+            },
+            "anime_english": {
+              "type": "string",
+              "example": "Trigun"
+            },
+            "anime_russian": {
+              "type": "string",
+              "example": "Триган"
+            },
+            "episode": {
+              "type": "integer",
+              "example": 7
+            },
+            "kind": {
+              "type": "string",
+              "example": "озвучка"
+            },
+            "language": {
+              "type": "string",
+              "example": "russian"
+            },
+            "quality": {
+              "type": "string",
+              "example": "TV"
+            },
+            "author": {
+              "type": "string",
+              "example": "2x2 (Мега-Аниме)"
+            },
+            "watches_count": {
+              "type": "integer"
+            },
+            "uploader": {
+              "type": "string",
+              "example": 278015
+            }
+          }
         }
       }
     }
